scalastyle fixes